force-app/main/default/objects/Fund__c/Fund__c.object-meta.xml
<CustomObject>
    <description>Represents an amount of restricted funding</description>
    <label>Fund</label>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>