force-app/main/default/objects/Fund__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this fund is currently active (usually means that there are still funds left to charge)</description>
    <inlineHelpText>True if this fund is currently active (usually means that there are still funds left to charge)</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>