force-app/main/default/objects/Fund__c/fields/Allocation_comments__c.field-meta.xml
<CustomField>
    <fullName>Allocation_comments__c</fullName>
    <description>Comments related to the planned allocations for this fund - can include intended ratio of invites to grants</description>
    <inlineHelpText>Comments related to the planned allocations for this fund - can include intended ratio of invites to grants</inlineHelpText>
    <label>Allocation comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>