force-app/main/default/objects/Fund__c/fields/Amount_funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_funded__c</fullName>
    <description>Amount in dollars of fund not including overhead</description>
    <inlineHelpText>Amount in dollars of fund not including overhead</inlineHelpText>
    <label>Amount funded</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>