force-app/main/default/objects/Fund__c/fields/Amount_funded_with_overhead__c.field-meta.xml
<CustomField>
    <fullName>Amount_funded_with_overhead__c</fullName>
    <description>Amount in dollars of fund including appropriate overhead</description>
    <inlineHelpText>Amount in dollars of fund including appropriate overhead</inlineHelpText>
    <label>Amount funded with overhead</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>