force-app/main/default/objects/Fund__c/fields/ChartofAccounts__c.field-meta.xml
<CustomField>
    <fullName>ChartofAccounts__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This fund&apos;s chart of accounts record</description>
    <inlineHelpText>This fund&apos;s chart of accounts record</inlineHelpText>
    <label>Chart of Accounts</label>
    <referenceTo>ChartofAccounts__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>