force-app/main/default/objects/Fund__c/fields/Date_of_first_allocation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_first_allocation__c</fullName>
    <description>The date on which the first allocation under this fund was created</description>
    <inlineHelpText>The date on which the first allocation under this fund was created</inlineHelpText>
    <label>Date of first allocation</label>
    <summarizedField>Allocation__c.CreatedDate</summarizedField>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>