force-app/main/default/objects/Fund__c/fields/Days_created_to_first_allocation__c.field-meta.xml
<CustomField>
    <fullName>Days_created_to_first_allocation__c</fullName>
    <description>The number of days from date created to date of the first allocation or to today if no allocation has been built</description>
    <formula>BLANKVALUE(DATEVALUE(Date_of_first_allocation__c), TODAY()) - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days from date created to date of the first allocation or to today if no allocation has been built</inlineHelpText>
    <label>Days created to first allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>