force-app/main/default/objects/Fund__c/fields/Donor_name__c.field-meta.xml
<CustomField>
    <fullName>Donor_name__c</fullName>
    <description>Donor org/name from linked gift record</description>
    <inlineHelpText>Donor org/name from linked gift record</inlineHelpText>
    <label>Donor name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>