force-app/main/default/objects/Fund__c/fields/Fiscal_sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_sponsorship__c</fullName>
    <description>This fund is for a women&apos;s fund (or the INWF) under fiscal sponsorship</description>
    <inlineHelpText>This fund is for a women&apos;s fund (or the INWF) under fiscal sponsorship</inlineHelpText>
    <label>Fiscal sponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>