force-app/main/default/objects/Fund__c/fields/Fund_grant_type__c.field-meta.xml
<CustomField>
    <fullName>Fund_grant_type__c</fullName>
    <description>Identifies any particular fund toward which this fund is directed</description>
    <inlineHelpText>Identifies any particular fund toward which this fund is directed</inlineHelpText>
    <label>Fund/grant type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>