force-app/main/default/objects/Fund__c/fields/Gift_amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_amount__c</fullName>
    <description>Amount from linked gift record</description>
    <inlineHelpText>Amount from linked gift record</inlineHelpText>
    <label>Gift amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>