force-app/main/default/objects/Fund__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>Narrative description of fund and how the funds should be spent (for INWF, enter &apos;INWF Dues&apos; or &apos;INWF Donations&apos;)</description>
    <inlineHelpText>Narrative description of fund and how the funds should be spent (for INWF, enter &apos;INWF Dues&apos; or &apos;INWF Donations&apos;)</inlineHelpText>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>