force-app/main/default/objects/Fund__c/fields/Num_allocations__c.field-meta.xml
<CustomField>
    <fullName>Num_allocations__c</fullName>
    <description>The number of allocations under this fund</description>
    <inlineHelpText>The number of allocations under this fund</inlineHelpText>
    <label>Num allocations</label>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>