force-app/main/default/objects/Fund__c/fields/Num_charges__c.field-meta.xml
<CustomField>
    <fullName>Num_charges__c</fullName>
    <description>The number of charges currently linked to this fund</description>
    <inlineHelpText>The number of charges currently linked to this fund</inlineHelpText>
    <label>Num charges</label>
    <summaryForeignKey>Charge__c.Fund__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>