force-app/main/default/objects/Fund__c/fields/Num_distributions__c.field-meta.xml
<CustomField>
    <fullName>Num_distributions__c</fullName>
    <description>The number of distributions made from this fund</description>
    <inlineHelpText>The number of distributions made from this fund</inlineHelpText>
    <label>Num distributions</label>
    <summaryForeignKey>Distribution__c.Source_fund__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>