force-app/main/default/objects/Fund__c/fields/Num_grants_awarded__c.field-meta.xml
<CustomField>
    <fullName>Num_grants_awarded__c</fullName>
    <description>Number of awarded grants under this fund</description>
    <inlineHelpText>Number of awarded grants under this fund</inlineHelpText>
    <label>Num grants awarded</label>
    <summarizedField>Allocation__c.Num_grants_awarded__c</summarizedField>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>