force-app/main/default/objects/Fund__c/fields/Num_invited__c.field-meta.xml
<CustomField>
    <fullName>Num_invited__c</fullName>
    <description>The number of profiles invited under this fund</description>
    <inlineHelpText>The number of profiles invited under this fund</inlineHelpText>
    <label>Num invited</label>
    <summarizedField>Allocation__c.Num_invited__c</summarizedField>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>