force-app/main/default/objects/Fund__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity record, if any, to which this fund is linked</description>
    <inlineHelpText>The opportunity record, if any, to which this fund is linked</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>