force-app/main/default/objects/Fund__c/fields/Opportunity_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner_name__c</fullName>
    <description>First and last name of the owner of the linked opportunity (if any)</description>
    <formula>IF(
 NOT(ISBLANK(Opportunity__c)),
  Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First and last name of the owner of the linked opportunity (if any)</inlineHelpText>
    <label>Opportunity owner name</label>
    <type>Text</type>
</CustomField>