force-app/main/default/objects/Fund__c/fields/Overhead_rate__c.field-meta.xml
<CustomField>
    <fullName>Overhead_rate__c</fullName>
    <defaultValue>0.2</defaultValue>
    <description>Fraction of the gift amount to be reserved for overhead (defaults to .2)</description>
    <inlineHelpText>Fraction of the gift amount to be reserved for overhead (defaults to .2)</inlineHelpText>
    <label>Overhead rate</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>