force-app/main/default/objects/Fund__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <description>Identifies any particular population toward which this fund is directed</description>
    <inlineHelpText>Identifies any particular population toward which this fund is directed</inlineHelpText>
    <label>Population</label>
    <length>255</length>
    <type>Text</type>
</CustomField>