force-app/main/default/objects/Fund__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The portfolio related to this fund, if any</description>
    <inlineHelpText>The portfolio related to this fund, if any</inlineHelpText>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>