force-app/main/default/objects/Fund__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region to which this fund applies (if any)</description>
    <inlineHelpText>Region to which this fund applies (if any)</inlineHelpText>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Funds</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>