force-app/main/default/objects/Fund__c/fields/Staff_responsible__c.field-meta.xml
<CustomField>
    <fullName>Staff_responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The staff member who is associated with this fund</description>
    <inlineHelpText>The staff member who is associated with this fund</inlineHelpText>
    <label>Staff responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>