force-app/main/default/objects/Fund__c/fields/Target_grantmaking_amount__c.field-meta.xml
<CustomField>
    <fullName>Target_grantmaking_amount__c</fullName>
    <description>The target amount for grantmaking for the fiscal year of this fund</description>
    <inlineHelpText>The target amount for grantmaking for the fiscal year of this fund</inlineHelpText>
    <label>Target grantmaking amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>