force-app/main/default/objects/Fund__c/fields/Target_plus__c.field-meta.xml
<CustomField>
    <fullName>Target_plus__c</fullName>
    <description>The &quot;target plus&quot; or &quot;best case&quot; amount for grantmaking for the fiscal year of this fund.  It should be greater or equal to the target grantmaking amount.</description>
    <inlineHelpText>The &quot;target plus&quot; or &quot;best case&quot; amount for grantmaking for the fiscal year of this fund.  It should be greater or equal to the target grantmaking amount.</inlineHelpText>
    <label>Target plus</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>