force-app/main/default/objects/Fund__c/fields/Thematic_priority__c.field-meta.xml
<CustomField>
    <fullName>Thematic_priority__c</fullName>
    <description>The default thematic priority for allocations under this fund</description>
    <inlineHelpText>The default thematic priority for allocations under this fund</inlineHelpText>
    <label>Thematic priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Thematic_priorities</valueSetName>
    </valueSet>
</CustomField>