force-app/main/default/objects/Fund__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Identifies any particular theme toward which this fund is directed</description>
    <inlineHelpText>Identifies any particular theme toward which this fund is directed</inlineHelpText>
    <label>Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>