force-app/main/default/objects/Fund__c/fields/Time_restriction__c.field-meta.xml
<CustomField>
    <fullName>Time_restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a time restriction (pledges or event gifts).</description>
    <inlineHelpText>Checked if this is a time restriction (pledges or event gifts).</inlineHelpText>
    <label>Time restriction</label>
    <type>Checkbox</type>
</CustomField>