force-app/main/default/objects/Fund__c/fields/To_be_allocated__c.field-meta.xml
<CustomField>
    <fullName>To_be_allocated__c</fullName>
    <description>The amount remaining to be allocated (amount funded minus total allocated)</description>
    <formula>IF( RecordType.DeveloperName = &quot;Standard&quot;, Amount_funded__c - Total_allocated__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount remaining to be allocated (amount funded minus total allocated)</inlineHelpText>
    <label>To be allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>