force-app/main/default/objects/Fund__c/fields/To_be_charged__c.field-meta.xml
<CustomField>
    <fullName>To_be_charged__c</fullName>
    <description>The amount remaining to be charged (amount funded minus total charged)</description>
    <formula>IF( RecordType.DeveloperName = &quot;Standard&quot;, Amount_funded__c - Total_charged__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount remaining to be charged (amount funded minus total charged)</inlineHelpText>
    <label>To be charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>