force-app/main/default/objects/Fund__c/fields/To_be_distributed__c.field-meta.xml
<CustomField>
    <fullName>To_be_distributed__c</fullName>
    <description>The amount funded minus the total distributed</description>
    <formula>IF( RecordType.DeveloperName = &quot;Pending&quot;, Amount_funded__c - Total_distributed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount restricted minus the total distributed</inlineHelpText>
    <label>To be distributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>