force-app/main/default/objects/Fund__c/fields/To_be_funded__c.field-meta.xml
<CustomField>
    <fullName>To_be_funded__c</fullName>
    <description>The amount projected for GM minus the amount funded</description>
    <formula>Total_available__c -  Amount_funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount projected for GM minus the amount funded</inlineHelpText>
    <label>To be funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>