force-app/main/default/objects/Fund__c/fields/To_be_released__c.field-meta.xml
<CustomField>
    <fullName>To_be_released__c</fullName>
    <description>The total of charges not yet released</description>
    <formula>Total_charged__c - Total_released__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total of charges not yet released</inlineHelpText>
    <label>To be released</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>