force-app/main/default/objects/Fund__c/fields/Total_allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_allocated__c</fullName>
    <description>The total of all linked allocations to be awarded under this fund</description>
    <inlineHelpText>The total of all linked allocations to be awarded under this fund</inlineHelpText>
    <label>Total allocated</label>
    <summarizedField>Allocation__c.Total_allocated__c</summarizedField>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>