force-app/main/default/objects/Fund__c/fields/Total_available__c.field-meta.xml
<CustomField>
    <fullName>Total_available__c</fullName>
    <description>The total amount of any linked projections and distributions.  Note that Standard and Pending funds only sum the grantmaking part of linked projections.</description>
    <inlineHelpText>The total amount of any linked projections and distributions.  Note that Standard and Pending funds only sum the grantmaking part of linked projections.</inlineHelpText>
    <label>Total available</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>