force-app/main/default/objects/Fund__c/fields/Total_awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_awarded__c</fullName>
    <description>Total of awarded grants under this fund</description>
    <inlineHelpText>Total of awarded grants under this fund</inlineHelpText>
    <label>Total awarded</label>
    <summarizedField>Allocation__c.Total_awarded__c</summarizedField>
    <summaryForeignKey>Allocation__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>