force-app/main/default/objects/Fund__c/fields/Total_charged__c.field-meta.xml
<CustomField>
    <fullName>Total_charged__c</fullName>
    <description>The total amount that has been charged against this fund</description>
    <inlineHelpText>The total amount that has been charged against this fund</inlineHelpText>
    <label>Total charged</label>
    <summarizedField>Charge__c.Amount_charged__c</summarizedField>
    <summaryFilterItems>
        <field>Charge__c.Canceled__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Charge__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>