force-app/main/default/objects/Fund__c/fields/Total_distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_distributed__c</fullName>
    <description>The total amount in distributions made from this fund</description>
    <inlineHelpText>The total amount in distributions made from this fund</inlineHelpText>
    <label>Total distributed</label>
    <summarizedField>Distribution__c.Amount__c</summarizedField>
    <summaryForeignKey>Distribution__c.Source_fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>