force-app/main/default/objects/Fund__c/fields/Total_released__c.field-meta.xml
<CustomField>
    <fullName>Total_released__c</fullName>
    <description>The total charges under this fund that have been released</description>
    <inlineHelpText>The total charges under this fund that have been released</inlineHelpText>
    <label>Total released</label>
    <summarizedField>Charge__c.Amount_charged__c</summarizedField>
    <summaryFilterItems>
        <field>Charge__c.Date_released__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Charge__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>