force-app/main/default/objects/Fund__c/fields/Unrestricted__c.field-meta.xml
<CustomField>
    <fullName>Unrestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this fund&apos;s funds are drawn from unrestricted gifts</description>
    <inlineHelpText>If checked, indicates that this fund&apos;s funds are drawn from unrestricted gifts</inlineHelpText>
    <label>Unrestricted</label>
    <type>Checkbox</type>
</CustomField>