force-app/main/default/objects/Fund__c/recordTypes/Overhead.recordType-meta.xml
<RecordType>
    <fullName>Overhead</fullName>
    <active>false</active>
    <description>Captures total &quot;overhead&quot;, that is, the non-grantmaking amount, from projections linked to grantmaking (non-revenue) funds.  The total is maintained by a nightly script.</description>
    <label>Overhead</label>
</RecordType>