force-app/main/default/objects/Fund__c/recordTypes/Pending.recordType-meta.xml
<RecordType>
    <fullName>Pending</fullName>
    <active>true</active>
    <description>Record type for &quot;pending&quot; fund records, holding funds (usually unrestricted) awaiting distribution into standard funds</description>
    <label>Pending</label>
</RecordType>