force-app/main/default/objects/Fund__c/recordTypes/Revenue.recordType-meta.xml
<RecordType>
    <fullName>Revenue</fullName>
    <active>false</active>
    <description>This &quot;fund&quot; is a gathering place for revenue coming primarily from small gifts and opportunities that aren&apos;t linked to standard or pending funds.  Primary use is for gathering unrestricted funds (chart of accounts = #Unrestricted).</description>
    <label>Revenue</label>
</RecordType>