force-app/main/default/objects/Fund__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard funds represent an amount of restricted funding to be allocated for grantmaking.</description>
    <label>Standard</label>
</RecordType>