force-app/main/default/objects/Fund__c/validationRules/AmountFundedLessThanAmountReleased.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountFundedLessThanAmountReleased</fullName>
    <active>true</active>
    <description>The amount funded may not be less than the total of released charges.</description>
    <errorConditionFormula>Amount_funded__c &lt; Total_released__c</errorConditionFormula>
    <errorMessage>The amount funded may not be less than the total of released charges.</errorMessage>
</ValidationRule>