force-app/main/default/objects/Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Total_available__c</columns>
    <columns>Amount_funded__c</columns>
    <columns>Narrative__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>